--- a/Debug/Makefile
+++ b/Debug/Makefile
@@ -37,6 +37,7 @@ SUBDIRS :=
 
 # Add inputs and outputs from these tool invocations to the build variables 
 C_SRCS +=  \
+../menu_list.c \
 ../joystick_driver.c \
 ../main.c \
 ../OLED_driver.c \
@@ -51,6 +52,7 @@ ASM_SRCS +=
 
 
 OBJS +=  \
+menu_list.o \
 joystick_driver.o \
 main.o \
 OLED_driver.o \
@@ -58,6 +60,7 @@ sram_test.o \
 USART.o
 
 OBJS_AS_ARGS +=  \
+menu_list.o \
 joystick_driver.o \
 main.o \
 OLED_driver.o \
@@ -65,6 +68,7 @@ sram_test.o \
 USART.o
 
 C_DEPS +=  \
+menu_list.d \
 joystick_driver.d \
 main.d \
 OLED_driver.d \
@@ -72,6 +76,7 @@ sram_test.d \
 USART.d
 
 C_DEPS_AS_ARGS +=  \
+menu_list.d \
 joystick_driver.d \
 main.d \
 OLED_driver.d \
@@ -92,6 +97,13 @@ LINKER_SCRIPT_DEP+=
 
 
 # AVR32/GNU C Compiler
+./menu_list.o: .././menu_list.c
+	@echo Building file: $<
+	@echo Invoking: AVR/GNU C Compiler : 5.4.0
+	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-gcc.exe$(QUOTE)  -x c -funsigned-char -funsigned-bitfields -DDEBUG  -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.2.209\include"  -O1 -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -g2 -Wall -mmcu=atmega162 -B "C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.2.209\gcc\dev\atmega162" -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
+	@echo Finished building: $<
+	
+
 ./joystick_driver.o: .././joystick_driver.c
 	@echo Building file: $<
 	@echo Invoking: AVR/GNU C Compiler : 5.4.0
