--- a/Debug/Makefile
+++ b/Debug/Makefile
@@ -37,6 +37,7 @@ SUBDIRS :=
 
 # Add inputs and outputs from these tool invocations to the build variables 
 C_SRCS +=  \
+../menu.c \
 ../menu_list.c \
 ../joystick_driver.c \
 ../main.c \
@@ -52,6 +53,7 @@ ASM_SRCS +=
 
 
 OBJS +=  \
+menu.o \
 menu_list.o \
 joystick_driver.o \
 main.o \
@@ -60,6 +62,7 @@ sram_test.o \
 USART.o
 
 OBJS_AS_ARGS +=  \
+menu.o \
 menu_list.o \
 joystick_driver.o \
 main.o \
@@ -68,6 +71,7 @@ sram_test.o \
 USART.o
 
 C_DEPS +=  \
+menu.d \
 menu_list.d \
 joystick_driver.d \
 main.d \
@@ -76,6 +80,7 @@ sram_test.d \
 USART.d
 
 C_DEPS_AS_ARGS +=  \
+menu.d \
 menu_list.d \
 joystick_driver.d \
 main.d \
@@ -97,6 +102,13 @@ LINKER_SCRIPT_DEP+=
 
 
 # AVR32/GNU C Compiler
+./menu.o: .././menu.c
+	@echo Building file: $<
+	@echo Invoking: AVR/GNU C Compiler : 5.4.0
+	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-gcc.exe$(QUOTE)  -x c -funsigned-char -funsigned-bitfields -DDEBUG  -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.2.209\include"  -O1 -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -g2 -Wall -mmcu=atmega162 -B "C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.2.209\gcc\dev\atmega162" -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
+	@echo Finished building: $<
+	
+
 ./menu_list.o: .././menu_list.c
 	@echo Building file: $<
 	@echo Invoking: AVR/GNU C Compiler : 5.4.0
