--- a/Debug/Makefile
+++ b/Debug/Makefile
@@ -40,6 +40,7 @@ C_SRCS +=  \
 ../can_driver.c \
 ../mcp2515_driver.c \
 ../menu.c \
+../menuconfigs.c \
 ../menu_list.c \
 ../spi_driver.c \
 ../joystick_driver.c \
@@ -59,6 +60,7 @@ OBJS +=  \
 can_driver.o \
 mcp2515_driver.o \
 menu.o \
+menuconfigs.o \
 menu_list.o \
 spi_driver.o \
 joystick_driver.o \
@@ -71,6 +73,7 @@ OBJS_AS_ARGS +=  \
 can_driver.o \
 mcp2515_driver.o \
 menu.o \
+menuconfigs.o \
 menu_list.o \
 spi_driver.o \
 joystick_driver.o \
@@ -83,6 +86,7 @@ C_DEPS +=  \
 can_driver.d \
 mcp2515_driver.d \
 menu.d \
+menuconfigs.d \
 menu_list.d \
 spi_driver.d \
 joystick_driver.d \
@@ -95,6 +99,7 @@ C_DEPS_AS_ARGS +=  \
 can_driver.d \
 mcp2515_driver.d \
 menu.d \
+menuconfigs.d \
 menu_list.d \
 spi_driver.d \
 joystick_driver.d \
@@ -132,6 +137,13 @@ LINKER_SCRIPT_DEP+=
 	
 
 ./menu.o: .././menu.c
+	@echo Building file: $<
+	@echo Invoking: AVR/GNU C Compiler : 5.4.0
+	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-gcc.exe$(QUOTE)  -x c -funsigned-char -funsigned-bitfields -DDEBUG  -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.2.209\include"  -O1 -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -g2 -Wall -mmcu=atmega162 -B "C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.2.209\gcc\dev\atmega162" -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
+	@echo Finished building: $<
+	
+
+./menuconfigs.o: .././menuconfigs.c
 	@echo Building file: $<
 	@echo Invoking: AVR/GNU C Compiler : 5.4.0
 	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-gcc.exe$(QUOTE)  -x c -funsigned-char -funsigned-bitfields -DDEBUG  -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.2.209\include"  -O1 -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -g2 -Wall -mmcu=atmega162 -B "C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.2.209\gcc\dev\atmega162" -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
