--- a/GccApplication1/GccApplication1/Debug/Makefile
+++ b/GccApplication1/GccApplication1/Debug/Makefile
@@ -38,6 +38,8 @@ SUBDIRS :=  \
 
 # Add inputs and outputs from these tool invocations to the build variables 
 C_SRCS +=  \
+../adc_controller.c \
+../adc_interrupt.c \
 ../can_controller.c \
 ../can_interrupt.c \
 ../Device_Startup/startup_sam3xa.c \
@@ -56,6 +58,8 @@ ASM_SRCS +=
 
 
 OBJS +=  \
+adc_controller.o \
+adc_interrupt.o \
 can_controller.o \
 can_interrupt.o \
 Device_Startup/startup_sam3xa.o \
@@ -67,6 +71,8 @@ timer_driver.o \
 uart.o
 
 OBJS_AS_ARGS +=  \
+adc_controller.o \
+adc_interrupt.o \
 can_controller.o \
 can_interrupt.o \
 Device_Startup/startup_sam3xa.o \
@@ -78,6 +84,8 @@ timer_driver.o \
 uart.o
 
 C_DEPS +=  \
+adc_controller.d \
+adc_interrupt.d \
 can_controller.d \
 can_interrupt.d \
 Device_Startup/startup_sam3xa.d \
@@ -89,6 +97,8 @@ timer_driver.d \
 uart.d
 
 C_DEPS_AS_ARGS +=  \
+adc_controller.d \
+adc_interrupt.d \
 can_controller.d \
 can_interrupt.d \
 Device_Startup/startup_sam3xa.d \
@@ -117,6 +127,20 @@ LINKER_SCRIPT_DEP+=  \
 
 
 # AVR32/GNU C Compiler
+./adc_controller.o: .././adc_controller.c
+	@echo Building file: $<
+	@echo Invoking: ARM/GNU C Compiler : 6.3.1
+	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\arm\arm-gnu-toolchain\bin\arm-none-eabi-gcc.exe$(QUOTE)  -x c -mthumb -D__SAM3X8E__ -DDEBUG  -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\arm\cmsis\5.0.1\CMSIS\Include" -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\SAM3X_DFP\1.0.50\include"  -O1 -ffunction-sections -mlong-calls -g3 -Wall -mcpu=cortex-m3 -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
+	@echo Finished building: $<
+	
+
+./adc_interrupt.o: .././adc_interrupt.c
+	@echo Building file: $<
+	@echo Invoking: ARM/GNU C Compiler : 6.3.1
+	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\arm\arm-gnu-toolchain\bin\arm-none-eabi-gcc.exe$(QUOTE)  -x c -mthumb -D__SAM3X8E__ -DDEBUG  -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\arm\cmsis\5.0.1\CMSIS\Include" -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\SAM3X_DFP\1.0.50\include"  -O1 -ffunction-sections -mlong-calls -g3 -Wall -mcpu=cortex-m3 -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
+	@echo Finished building: $<
+	
+
 ./can_controller.o: .././can_controller.c
 	@echo Building file: $<
 	@echo Invoking: ARM/GNU C Compiler : 6.3.1
