need to implement PID, encoder values can be read :)

--- a/GccApplication1/GccApplication1/Debug/Makefile
+++ b/GccApplication1/GccApplication1/Debug/Makefile
@@ -42,9 +42,10 @@ C_SRCS +=  \
 ../adc_interrupt.c \
 ../can_controller.c \
 ../can_interrupt.c \
+../dac_controller.c \
 ../Device_Startup/startup_sam3xa.c \
 ../Device_Startup/system_sam3xa.c \
-../joystick.c \
+../motor_controller.c \
 ../main.c \
 ../printf-stdarg.c \
 ../timer_driver.c \
@@ -62,9 +63,10 @@ adc_controller.o \
 adc_interrupt.o \
 can_controller.o \
 can_interrupt.o \
+dac_controller.o \
 Device_Startup/startup_sam3xa.o \
 Device_Startup/system_sam3xa.o \
-joystick.o \
+motor_controller.o \
 main.o \
 printf-stdarg.o \
 timer_driver.o \
@@ -75,9 +77,10 @@ adc_controller.o \
 adc_interrupt.o \
 can_controller.o \
 can_interrupt.o \
+dac_controller.o \
 Device_Startup/startup_sam3xa.o \
 Device_Startup/system_sam3xa.o \
-joystick.o \
+motor_controller.o \
 main.o \
 printf-stdarg.o \
 timer_driver.o \
@@ -88,9 +91,10 @@ adc_controller.d \
 adc_interrupt.d \
 can_controller.d \
 can_interrupt.d \
+dac_controller.d \
 Device_Startup/startup_sam3xa.d \
 Device_Startup/system_sam3xa.d \
-joystick.d \
+motor_controller.d \
 main.d \
 printf-stdarg.d \
 timer_driver.d \
@@ -101,9 +105,10 @@ adc_controller.d \
 adc_interrupt.d \
 can_controller.d \
 can_interrupt.d \
+dac_controller.d \
 Device_Startup/startup_sam3xa.d \
 Device_Startup/system_sam3xa.d \
-joystick.d \
+motor_controller.d \
 main.d \
 printf-stdarg.d \
 timer_driver.d \
@@ -155,6 +160,13 @@ LINKER_SCRIPT_DEP+=  \
 	@echo Finished building: $<
 	
 
+./dac_controller.o: .././dac_controller.c
+	@echo Building file: $<
+	@echo Invoking: ARM/GNU C Compiler : 6.3.1
+	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\arm\arm-gnu-toolchain\bin\arm-none-eabi-gcc.exe$(QUOTE)  -x c -mthumb -D__SAM3X8E__ -DDEBUG  -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\arm\cmsis\5.0.1\CMSIS\Include" -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\SAM3X_DFP\1.0.50\include"  -O1 -ffunction-sections -mlong-calls -g3 -Wall -mcpu=cortex-m3 -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
+	@echo Finished building: $<
+	
+
 Device_Startup/startup_sam3xa.o: ../Device_Startup/startup_sam3xa.c
 	@echo Building file: $<
 	@echo Invoking: ARM/GNU C Compiler : 6.3.1
@@ -169,7 +181,7 @@ Device_Startup/system_sam3xa.o: ../Device_Startup/system_sam3xa.c
 	@echo Finished building: $<
 	
 
-./joystick.o: .././joystick.c
+./motor_controller.o: .././motor_controller.c
 	@echo Building file: $<
 	@echo Invoking: ARM/GNU C Compiler : 6.3.1
 	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\arm\arm-gnu-toolchain\bin\arm-none-eabi-gcc.exe$(QUOTE)  -x c -mthumb -D__SAM3X8E__ -DDEBUG  -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\arm\cmsis\5.0.1\CMSIS\Include" -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\SAM3X_DFP\1.0.50\include"  -O1 -ffunction-sections -mlong-calls -g3 -Wall -mcpu=cortex-m3 -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
