--- a/GccApplication1/GccApplication1/Debug/Makefile
+++ b/GccApplication1/GccApplication1/Debug/Makefile
@@ -50,7 +50,8 @@ C_SRCS +=  \
 ../printf-stdarg.c \
 ../timer.c \
 ../timer_driver.c \
-../uart.c
+../uart.c \
+../usart.c
 
 
 PREPROCESSING_SRCS += 
@@ -72,7 +73,8 @@ main.o \
 printf-stdarg.o \
 timer.o \
 timer_driver.o \
-uart.o
+uart.o \
+usart.o
 
 OBJS_AS_ARGS +=  \
 adc_controller.o \
@@ -87,7 +89,8 @@ main.o \
 printf-stdarg.o \
 timer.o \
 timer_driver.o \
-uart.o
+uart.o \
+usart.o
 
 C_DEPS +=  \
 adc_controller.d \
@@ -102,7 +105,8 @@ main.d \
 printf-stdarg.d \
 timer.d \
 timer_driver.d \
-uart.d
+uart.d \
+usart.d
 
 C_DEPS_AS_ARGS +=  \
 adc_controller.d \
@@ -117,7 +121,8 @@ main.d \
 printf-stdarg.d \
 timer.d \
 timer_driver.d \
-uart.d
+uart.d \
+usart.d
 
 OUTPUT_FILE_PATH +=ice_ice_arduino.elf
 
@@ -222,6 +227,13 @@ Device_Startup/system_sam3xa.o: ../Device_Startup/system_sam3xa.c
 	
 
 ./uart.o: .././uart.c
+	@echo Building file: $<
+	@echo Invoking: ARM/GNU C Compiler : 6.3.1
+	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\arm\arm-gnu-toolchain\bin\arm-none-eabi-gcc.exe$(QUOTE)  -x c -mthumb -D__SAM3X8E__ -DDEBUG  -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\arm\cmsis\5.0.1\CMSIS\Include" -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\SAM3X_DFP\1.0.50\include"  -O1 -ffunction-sections -mlong-calls -g3 -Wall -mcpu=cortex-m3 -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
+	@echo Finished building: $<
+	
+
+./usart.o: .././usart.c
 	@echo Building file: $<
 	@echo Invoking: ARM/GNU C Compiler : 6.3.1
 	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\arm\arm-gnu-toolchain\bin\arm-none-eabi-gcc.exe$(QUOTE)  -x c -mthumb -D__SAM3X8E__ -DDEBUG  -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\arm\cmsis\5.0.1\CMSIS\Include" -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\SAM3X_DFP\1.0.50\include"  -O1 -ffunction-sections -mlong-calls -g3 -Wall -mcpu=cortex-m3 -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
