fixed game over timing

--- a/GccApplication1/GccApplication1/Debug/Makefile
+++ b/GccApplication1/GccApplication1/Debug/Makefile
@@ -48,6 +48,7 @@ C_SRCS +=  \
 ../feedback.c \
 ../motor_controller.c \
 ../main.c \
+../pid.c \
 ../printf-stdarg.c \
 ../timer.c \
 ../timer_driver.c \
@@ -72,6 +73,7 @@ Device_Startup/system_sam3xa.o \
 feedback.o \
 motor_controller.o \
 main.o \
+pid.o \
 printf-stdarg.o \
 timer.o \
 timer_driver.o \
@@ -89,6 +91,7 @@ Device_Startup/system_sam3xa.o \
 feedback.o \
 motor_controller.o \
 main.o \
+pid.o \
 printf-stdarg.o \
 timer.o \
 timer_driver.o \
@@ -106,6 +109,7 @@ Device_Startup/system_sam3xa.d \
 feedback.d \
 motor_controller.d \
 main.d \
+pid.d \
 printf-stdarg.d \
 timer.d \
 timer_driver.d \
@@ -123,6 +127,7 @@ Device_Startup/system_sam3xa.d \
 feedback.d \
 motor_controller.d \
 main.d \
+pid.d \
 printf-stdarg.d \
 timer.d \
 timer_driver.d \
@@ -211,6 +216,13 @@ Device_Startup/system_sam3xa.o: ../Device_Startup/system_sam3xa.c
 	
 
 ./main.o: .././main.c
+	@echo Building file: $<
+	@echo Invoking: ARM/GNU C Compiler : 6.3.1
+	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\arm\arm-gnu-toolchain\bin\arm-none-eabi-gcc.exe$(QUOTE)  -x c -mthumb -D__SAM3X8E__ -DDEBUG  -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\arm\cmsis\5.0.1\CMSIS\Include" -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\SAM3X_DFP\1.0.50\include"  -O1 -ffunction-sections -mlong-calls -g3 -Wall -mcpu=cortex-m3 -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
+	@echo Finished building: $<
+	
+
+./pid.o: .././pid.c
 	@echo Building file: $<
 	@echo Invoking: ARM/GNU C Compiler : 6.3.1
 	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\arm\arm-gnu-toolchain\bin\arm-none-eabi-gcc.exe$(QUOTE)  -x c -mthumb -D__SAM3X8E__ -DDEBUG  -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\arm\cmsis\5.0.1\CMSIS\Include" -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\SAM3X_DFP\1.0.50\include"  -O1 -ffunction-sections -mlong-calls -g3 -Wall -mcpu=cortex-m3 -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
